# Empower_AI_OCR

./: # Code Citations.md  .dockerignore  .env.example  .gitignore  FILE_INVENTORY.md  IMPLEMENTATION_CHECKLIST.md  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  VERIFICATION_REPORT.md  alembic.ini  generic_llm_extraction.json  generic_llm_extraction_11b.json  invoice_fields_paddle_layout_llama.json  invoice_fields_result.json  invoice_number_from_layout_llama.json  layout_diag_after_downgrade.txt  layout_test_output.txt  ovis_vm_debug_result.json  ovis_vm_debug_result_retest.json  paddle_layout_content.json  paddleocr_basic_result.json  pyproject.toml  requirements.txt  test_paddle_structure.py
.github/: copilot-instructions.md
app/: __init__.py  main.py
app/api/v1/: admin.py  ocr.py  sandbox.py  tenancy.py
app/auth/: api_key.py  security.py
app/billing/: __init__.py
app/core/: config.py  constants.py  database.py
app/llm/: __init__.py  base.py
app/llm/providers/: __init__.py  llama.py  ollama.py  sglang.py
app/models/: database.py
app/observability/: __init__.py  telemetry.py
app/schemas/: __init__.py  schemas.py
app/scripts/: init_db.py
app/services/: billing_service.py  ocr_service.py
app/tenancy/: __init__.py  context.py
config/: document_types.yaml
config/output_schemas/: aadhaar_card.json  cheque.json  invoice.json  pan_card.json
docker/: 01_init.sql  Dockerfile  docker-compose.yml
docs/: API.md  ARCHITECTURE.md  DEPLOYMENT.md  LLM_CONFIGURATION.md  MULTI_MODEL_GUIDE.md  SETUP.md
glmocr_direct_test/: result.json  result.md
glmocr_layout_after_fix/0124/: 0124.json  0124.md
glmocr_layout_after_reinstall/0124/: 0124.json  0124.md
glmocr_layout_cli_retest/0124/: 0124.json  0124.md
glmocr_layout_results/: layout_result.json  layout_result.md  summary.json
glmocr_ollama_results/: result.json
migrations/: env.py
migrations/versions/: bbf66dcb0c09_initial_migration_create_all_tables.py
scripts/: check_dburl.py  debug_dburl.py  debug_dotenv.py  debug_llama.py  debug_ovis_vm.py  debug_raw_ollama.py  extract_fields_generic.py  extract_fields_generic_llama.py  extract_fields_generic_llama_v2.py  extract_from_layout_json.py  ovis_api_server.py  ovis_model_card.py  probe_ollama.py  test_env.py
test_layout_baseline_-_no_layout/: result.json
test_layout_layout_enabled/: result.json
tests/: conftest.py  test_ocr_service.py  test_ollama_provider.py
